fix: max-w-1000px causes modal to be too small

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,6 @@
 
     body > * {
         grid-column: 2;
-        @apply max-w-[1000px];
         @apply px-3;
     }
 
